[gd_scene load_steps=14 format=3 uid="uid://dnr4gofaqtr22"]

[ext_resource type="Script" uid="uid://jpmjla0623pf" path="res://Scripts/selection_scene.gd" id="1_bl4ax"]
[ext_resource type="Texture2D" uid="uid://cchw0nrt5a14n" path="res://Art Assets/backgrounds/bground.png" id="1_nrel7"]
[ext_resource type="FontFile" uid="uid://ctac5wch5ukxl" path="res://Art Assets/VCR_OSD_MONO_1.001.ttf" id="2_bl4ax"]
[ext_resource type="Texture2D" uid="uid://bf1gnlven115h" path="res://Art Assets/buttons/pvpbattle_button.png" id="3_ogocp"]
[ext_resource type="Texture2D" uid="uid://cfkfrbmrkdd1w" path="res://Art Assets/buttons/adventuretutorial_button.png" id="4_cyr06"]
[ext_resource type="Texture2D" uid="uid://buv67q5krfss" path="res://Art Assets/buttons/stonebutton.png" id="6_ogocp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x7vc6"]
texture = ExtResource("1_nrel7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_us2fe"]
texture = ExtResource("3_ogocp")
region_rect = Rect2(94.89482, 38.571754, 130.46114, 39.020897)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xgagr"]
texture = ExtResource("4_cyr06")
region_rect = Rect2(94.868805, 38.937893, 130.31706, 38.30402)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cyr06"]
texture = ExtResource("6_ogocp")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3vl5w"]
texture = ExtResource("6_ogocp")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v2r7x"]
texture = ExtResource("6_ogocp")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uwfh2"]
texture = ExtResource("6_ogocp")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bl4ax")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_x7vc6")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -515.5
offset_top = -408.0
offset_right = 515.5
offset_bottom = -284.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("2_bl4ax")
theme_override_font_sizes/font_size = 150
text = "SELECT YOUR PATH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pvp" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 84.0
offset_top = -79.75177
offset_right = 879.0
offset_bottom = 79.75177
grow_vertical = 2
theme_override_colors/font_color = Color(0.8627451, 0.7490196, 0.5686275, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bl4ax")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxTexture_us2fe")
theme_override_styles/pressed = SubResource("StyleBoxTexture_us2fe")
theme_override_styles/hover = SubResource("StyleBoxTexture_us2fe")
theme_override_styles/disabled = SubResource("StyleBoxTexture_us2fe")
text = "PVP BATTLE"

[node name="Singleplayer" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -877.0
offset_top = -77.0
offset_right = -88.0
offset_bottom = 77.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.8627451, 0.7490196, 0.5686275, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bl4ax")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxTexture_xgagr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xgagr")
theme_override_styles/hover = SubResource("StyleBoxTexture_xgagr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_xgagr")
text = " SINGLEPLAYER"
alignment = 0

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 1646.0
offset_top = 897.0
offset_right = 1791.0
offset_bottom = 967.0
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bl4ax")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_cyr06")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3vl5w")
theme_override_styles/hover = SubResource("StyleBoxTexture_v2r7x")
theme_override_styles/disabled = SubResource("StyleBoxTexture_uwfh2")
text = "BACK"

[connection signal="pressed" from="Pvp" to="." method="_on_pvp_pressed"]
[connection signal="pressed" from="Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
